0.04
 - Fix use lib '.' in Makefile.PL.
 - Update Module::Install to 1.21 version.
 - Update author name.

0.03 2015-09-18T10:06:48+02:00
 - Add minimal version of Perl.
 - Add repository to doc.
 - Fix test dependencies.
 - Improve AUTHOR section in doc.
 - Improve LICENSE AND COPYRIGHT section in doc.
 - Improve SEE ALSO section in doc.
 - Move author tests to xt/ directory.
 - Remove diacritics from author name.
 - Remove trailing whitespace.
 - Update Module::Install to 1.16 version.
 - Update copyright years.

0.02 2014-10-13T11:19:30+02:00
 - Add LICENSE file.

0.01 2014-09-03T13:56:45+02:00
 - First version.