@@ -29,7 +29,7 @@ requires:
   perl: 5.8.0
 resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=Error-Pure-Output-Tags-HTMLCustomPage
-  homepage: https://github.com/tupinek/Error-Pure-Output-Tags-HTMLCustomPage
+  homepage: https://github.com/michal-josef-spacek/Error-Pure-Output-Tags-HTMLCustomPage
   license: http://opensource.org/licenses/bsd-license.php
-  repository: git://github.com/tupinek/Error-Pure-Output-Tags-HTMLCustomPage
+  repository: git://github.com/michal-josef-spacek/Error-Pure-Output-Tags-HTMLCustomPage
 version: '0.04'
