@@ -96,7 +96,8 @@ SEE ALSO
         Install the Error::Pure modules.
 
 REPOSITORY
-    <https://github.com/tupinek/Error-Pure-Output-Tags-HTMLCustomPage>
+    <https://github.com/michal-josef-spacek/Error-Pure-Output-Tags-HTMLCusto
+    mPage>
 
 AUTHOR
     Michal Josef Špaček <mailto:skim@cpan.org>
